--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,67 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: #12c2e9;  
+  background: -webkit-linear-gradient(to right, #f64f59, #c471ed, #12c2e9);  
+  background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); 
+  
+  height: 50px;
+  padding: 20px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-title{
+  font-size: 1.5em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box{
+  display:flex;
+  flex-direction: column;
+  justify-content: space-around;
+  font-family: 'Lobster',cursive;
+  font-size: 100%;
+  margin: 2vw 9vw;
+  min-height: 75vh;
+  padding-left: 1vw;
+  text-align: left;
+  width: 30%;
+  word-wrap: break-word;
+}
+
+.left{
+  background: #83a4d4;  
+background: -webkit-linear-gradient(to right, #b6fbff, #83a4d4); 
+background: linear-gradient(to right, #b6fbff, #83a4d4); 
+
+  float: left;
+  padding-top: 1vw;
+}
+
+textarea{
+  border: none;
+  resize: none;
+}
+
+.right{
+  background: #0f0c29;  
+background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  
+background: linear-gradient(to right, #24243e, #302b63, #0f0c29); 
+
+color: white;
+  float: right;
+  padding-top: 1vw;
+}
+footer{
+  width: 100%;
+  font-weight: 600;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 1rem;
+  padding-right: 3rem;
+  background: #6441A5;  
+background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  
+background: linear-gradient(to right, #2a0845, #6441A5); 
+
+  color: white;
 }
